--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   height: 100%;
   margin: 0;
@@ -7,35 +11,68 @@ body {
 }
 
 header {
-  position: fixed;
-  top: 0;
   width: 100%;
   z-index: 1000;
-  background-color: lightblue;
+  background-color: #414288;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #f7f7ff;
 }
 
 main {
-  flex: 1;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  overflow-y: auto;
-}
-
-ul {
+  margin: auto;
+  width: 70vw;
+  padding-top: 3vh;
   display: flex;
-  justify-content: space-evenly;
-  padding: 20px;
-  font-size: x-large;
-  list-style: none;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-a {
-  color: white;
-  text-decoration: none;
+h2 {
+  text-align: center;
+  font-size: 6vw;
+  width: inherit;
+  background-color: #352208;
+  border-radius: 4vh;
+  padding-top: 4vh;
+  padding-bottom: 4vh;
+  color: #efcb68;
 }
 
-a:hover {
-  color: black;
+form {
+  width: inherit;
+  background-color: #352208;
+  border-radius: 4vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5vh;
+}
+form p {
+  color: #efcb68;
+}
+
+form input {
+  width: 75%;
+  margin: 0.5vh;
+}
+
+form button {
+  width: 30%;
+  background-color: #5c9ead;
+  margin: 0.5vh;
+  border-radius: 2vh;
+  border: transparent;
+  padding: 1vh;
+}
+
+form button:hover {
+  cursor: pointer;
+  background-color: #414288;
 }
 
 footer {
@@ -45,6 +82,16 @@ footer {
   display: flex;
   justify-content: center;
   padding: 20px;
-  background-color: lightblue;
-  color: white;
+  background-color: #414288;
+  color: #f7f7ff;
+}
+
+@media (min-width: 800px) {
+  main {
+    width: 560px;
+    padding-top: 20px;
+  }
+  h2 {
+    font-size: 48px;
+  }
 }
