--- a/client/projectPage/style.css
+++ b/client/projectPage/style.css
@@ -29,7 +29,7 @@ header {
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  /align-items: center;
+  align-items: center;
 }
 
 header h2 {
