--- a/client/style.css
+++ b/client/style.css
@@ -87,6 +87,7 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
+  height: 10vh;
   display: flex;
   justify-content: center;
   padding: 20px;
