--- a/client/header and footer/style.css
+++ b/client/header and footer/style.css
@@ -1,3 +1,14 @@
+:root {
+  --primary-color: #e4dddc; /* light grey */
+  --secondary-color: #6d6d72; /* medium grey */
+  --accent-color: #352208; /* brown */
+  --highlight-color: #5c9ead; /* blue */
+  --background-color: #f8f4f1; /* bg colour off white */
+}
+
+* {
+  box-sizing: border-box;
+}
 body {
   height: 100%;
   margin: 0;
@@ -7,12 +18,13 @@ body {
 }
 
 header {
-  position: fixed;
-  top: 0;
   width: 100%;
   z-index: 1000;
-  background-color: lightblue;
-  height: 60px;
+  height: 13vh;
+  background-color: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 main {
@@ -42,10 +54,10 @@ a:hover {
 footer {
   position: fixed;
   bottom: 0;
+  height: 10vh;
   width: 100%;
   display: flex;
   justify-content: center;
-  padding: 20px;
-  background-color: lightblue;
-  color: white;
+  align-items: center;
+  background-color: var(--primary-color);
 }
