--- a/client/task/style.css
+++ b/client/task/style.css
@@ -20,14 +20,16 @@ body {
 }
 
 header {
+  width: 100%;
+  z-index: 1000;
+  height: 13vh;
   background-color: var(--primary-color);
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-header h2 {
+header h1 {
   color: var(--accent-color);
   margin-bottom: 0.5rem;
   text-align: center;
@@ -38,19 +40,20 @@ nav {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  max-width: 1200px;
 }
 
 nav ul {
   list-style: none;
   display: flex;
-  gap: 1rem;
+  gap: 3vw;
   margin: 0;
+  padding: 0;
   justify-content: center;
   flex: 1;
 }
 
 nav ul li a {
+  font-size: 1rem;
   text-decoration: none;
   color: var(--accent-color);
   font-weight: bold;
@@ -61,7 +64,7 @@ nav ul li a:hover {
 }
 
 main {
-  padding: 1rem;
+  height: 113vh;
   text-align: center;
 }
 
@@ -77,19 +80,20 @@ main {
   padding: 5px 0px;
 }
 
-.task-titlecard {
+.task-titlecard,
+.task-detailcard {
   width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: #e4dddc;
-  color: #352208;
+  background-color: var(--primary-color);
+  color: var(--accent-color);
   margin: 20px;
   padding: 20px 10px;
   border-radius: 10px;
-  border: 2px solid #6d6d72;
+  border: 2px solid var(--secondary-color);
 }
 
 .task-titlecard div {
@@ -146,7 +150,7 @@ select {
   text-align: center;
 }
 
-.task-detailcard {
+/*.task-detailcard {
   width: 80%;
   display: flex;
   flex-direction: column;
@@ -158,7 +162,7 @@ select {
   padding: 20px 10px;
   border-radius: 10px;
   border: 2px solid #6d6d72;
-}
+}*/
 
 .task-detailcard div {
   display: flex;
@@ -196,15 +200,16 @@ select {
 footer {
   position: fixed;
   bottom: 0;
+  height: 10vh;
   width: 100%;
   display: flex;
   justify-content: center;
-  background-color: #e4dddc;
-  color: #352208;
-}
-
-/* footer {
-  display: flex;
   align-items: center;
-  justify-content: center;
-} */
+  background-color: var(--primary-color);
+}
+/*@media (min-width: 800px) {
+  main {
+    width: 560px;
+  }
+}
+*/
