--- a/client/about/style.css
+++ b/client/about/style.css
@@ -19,6 +19,7 @@ body {
 header {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   background-color: var(--primary-color);
   padding: 20px;
@@ -27,6 +28,17 @@ header {
   top: 0;
   width: 100%;
   z-index: 1000;
+}
+
+header a {
+  font-size: 1rem;
+  text-decoration: none;
+  color: var(--accent-color);
+  font-weight: bold;
+}
+
+header a:hover {
+  color: var(--highlight-color);
 }
 
 main {
@@ -71,8 +83,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   background-color: var(--primary-color);
   padding: 10px;
-  height: 50px;
+  height: 10vh;
   position: relative;
 }
