--- a/client/chat/style.css
+++ b/client/chat/style.css
@@ -79,6 +79,7 @@ footer {
   height: 10vh;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: var(--primary-color);
